force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__MarkupAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MarkupAmount__c</fullName>
        <description>Markup amount for this line item.</description>
        <inlineHelpText>Markup amount for this line item.</inlineHelpText>
        <label>Markup (Amt)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>