force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__MarkupRate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Markup on this line item expressed as a percentage.</description>
        <inlineHelpText>Markup on this line item expressed as a percentage.</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>