force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__NonDiscountable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NonDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this line item as non-discountable.</description>
        <inlineHelpText>Marks this line item as non-discountable.</inlineHelpText>
        <label>Non Discountable</label>
        <type>Checkbox</type>
    </CustomField>