force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__OptionDiscountAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OptionDiscountAmount__c</fullName>
        <description>Discount extended on this product because it&apos;s part of a package.</description>
        <inlineHelpText>Discount extended on this product because it&apos;s part of a package.</inlineHelpText>
        <label>Option Discount (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>