force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__OriginalQuoteLineId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OriginalQuoteLineId__c</fullName>
        <description>The id of the original quote line which this line was derived from.</description>
        <externalId>true</externalId>
        <inlineHelpText>The id of the original quote line which this line was derived from.</inlineHelpText>
        <label>Original Quote Line Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>