force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__PackageProductCode__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PackageProductCode__c</fullName>
        <description>Product code for the package generated by appending codes of selected components according to specified pattern.</description>
        <inlineHelpText>Automatically generated list of product codes for each component in this package.</inlineHelpText>
        <label>Package Product Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>