force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__PackageProductDescription__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PackageProductDescription__c</fullName>
        <description>Product Description for the package generated by appending descriptions of selected components according to specified pattern.</description>
        <inlineHelpText>Dynamic Product Description generated from the components inside this package.</inlineHelpText>
        <label>Package Product Description</label>
        <length>32000</length>
        <type>Html</type>
    </CustomField>