force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__PartnerTotal__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PartnerTotal__c</fullName>
        <description>Total of the Partner Discount. By default, partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</description>
        <formula>IF(AND(SBQQ__Renewal__c, !SBQQ__Existing__c, ISBLANK(SBQQ__PriorQuantity__c)), 0, SBQQ__PartnerPrice__c * SBQQ__EffectiveQuantity__c)</formula>
        <inlineHelpText>Total of the Partner Discount.</inlineHelpText>
        <label>Partner Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>