force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__PricebookEntryId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PricebookEntryId__c</fullName>
        <label>Pricebook Entry Id</label>
        <length>64</length>
        <type>Text</type>
    </CustomField>