force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__PriceEditable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PriceEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates if price is editable for this line item</description>
        <inlineHelpText>Flag that indicates if price is editable for this line item.</inlineHelpText>
        <label>Price Editable</label>
        <type>Checkbox</type>
    </CustomField>