force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__ProductCode__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductCode__c</fullName>
        <description>Code for the product referenced by this line.</description>
        <formula>SBQQ__Product__r.ProductCode</formula>
        <inlineHelpText>Code for the product referenced by this line.</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </CustomField>