force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__ProductFamily__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductFamily__c</fullName>
        <description>How you would categorize/group/organize this within Salesforce (whether it&apos;s a new or existing Product Family). Additionally, this field can be used during product selection to filter to the correct product or product SKU.</description>
        <formula>TEXT(SBQQ__Product__r.Family)</formula>
        <inlineHelpText>How you would categorize/group/organize this within Salesforce (whether it&apos;s a new or existing Product Family). Additionally, this field can be used during product selection to filter to the correct product or product SKU.</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </CustomField>