force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__ProrateMultiplier__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProrateMultiplier__c</fullName>
        <description>Calculated ratio used to compute Prorated Price.</description>
        <inlineHelpText>Calculated ratio used to compute Prorated Price.</inlineHelpText>
        <label>Prorate Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>