force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__Quantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Quantity__c</fullName>
        <description>Quantity being quoted.</description>
        <inlineHelpText>Quantity being quoted.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>