force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__SpecialPriceDescription__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SpecialPriceDescription__c</fullName>
        <description>Name of the Discount Tier or description of Contracted Price that generated special price for this line item</description>
        <inlineHelpText>Name of the Discount Tier or Contacted Price applied to achieve the special price for this line item.</inlineHelpText>
        <label>Special Price Description</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>